k8s/analytics-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: analytics
spec:
  type: ClusterIP
  selector:
    app: analytics-service
  ports:
    - port: 80
      targetPort: 8005
